--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,304 @@
-
-body{
-    background-color:white ;
+body {
+  background-color: white;
+  font-family: 'Poppins', sans-serif;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container {
+  width: 1100px;
+  background-color: #161616;
+  margin-top: 40px;
+  border-radius: 30px;
+  align-items: center;
 }
 
-.main{
-    align-items: center;
-   
-   
-   
+.top {
+  color: aliceblue;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  border-radius: 40px;
+  margin-top: 20px;
+  
+}
+.topleft{
+  width: 300px;
+  padding:40px;
+  margin: 10px;
+}
+.topleft h1{
+  font-size: 40px;
+}
+.topleft p{
+  font-size: 15px;
+}
+.topleft button{
+  margin-top: 20px;
+  padding: 10px 30px;
+  border-radius: 5px;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
+span{
+  margin-left:10px;
+  size: 2px;
+}
+.topright{
+  padding: 20px;
+  margin-left: 40px;
+}
+
+.topright img{
+  width: 100%;
+
+}
+.down {
+  display: flex;
+  
+}
+.downcontainer {
+  margin-top: 60px;
+  background-color: white;
+}
+
+.mainleft {
+  width: 200px;
+  height: 250px;
+  background-color: black;
+  text-align: center;
+}
+.mainleftsub {
+  margin-top: 4px;
+ 
+  padding: 20px;
+}
+.mainleftsub button{
+    width: 130px;
+  padding:5px;
+  margin: 10px 20px;
+  border-radius:5px;
+}
+.blog{
+  background-color: red;
+  
+
+
+}
+.mainright {
+  
+  margin-left: 20px;
+ 
+}
+
+
+.article {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.articleimg {
+  margin: 5px;
+  
+  padding-left: 5px;
+  padding-bottom: 10px;
+  
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.articleimg img {
+  width: 100%;
+}
+.info{
+  display: flex;
+  align-items: center;
+   justify-content: space-between;
+
+  
+}
+.transfer{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 5px 10px;
+}
+.displaybutton{
+  display: none;
+}
+.fa-clock,.fa-message{
+  color:burlywood;
+}
+footer{
+    background-color: #161616;
+    color: white;
+    margin-top: 100px;
+    height: 300px;
+}
+footer h1{
+    text-align: center;
+    padding-top: 50px;
+
+}
+
+footer ul{
+    display:flex;
+    
+    justify-content: center;
+ 
+}
+footer ul li{
+    margin-left: 15px;
+    list-style-type: none;
     
 }
-section{
+.icon a{
+color: aliceblue;
+padding: 20px
+
+}
+
+
+hr {
+  margin: auto;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+
+
+
+
+
+
+/*media query */
+
+
+
+@media only screen and (max-width:668px) {
+  .top{
+   
+   display:flex;
+   flex-direction: column;
+  
+    align-items: center;
+    
+  
+  
+  }
+  .down{
+    display: flex;
+    flex-direction: column;
    
     align-items: center;
-}
-.top{
+  }
+    .mainleft{
+     
+     width: 100%;
+     margin-bottom: 10px;
+    }
+    .mainleftsub button{
+        width: 200px;
+        height:50px;
+        border-radius: 5px;
+    }
+    .article {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      margin: 8px;
+      padding: 5px;
+    }
+    .articleimg {
+      width: 210px
+    }
+    footer ul{
+      display:flex;
+      
+      align-items: center;
+      flex-direction: column;
+      
+   
+  }
+  footer ul li{
+    padding: 5px;
+    margin: 5px;
+  }
+  footer{
+    height: 100%;
+  }
+
+  }
+
+
+  @media only screen and (min-width:688px) and (max-width:992px){
+
+   .container{
+
+    width:100%
+   }
+   .topright img{
+   
+    margin-top: 150px;
+    height:300px ;
+   
+    
+   }
+    .down{
+      display: flex;
+      flex-direction: column;
+     
+      align-items: center;
+    }
+    .mainleftsub{
+     display:flex;
+     flex-direction: row;
+    
+   
+  }
+  .mainleftsub div{
+  align-items: center;
+  }
+  .mainleft{
+    background-color: white;
+   height: 100px;
+   width: 650px;
+    
+  }
+  .article {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    background-color:#161616;
-    color: azure;
-    width: 1200px;
-    height: 400px;
-    border-radius: 30px;
-    align-items: center;
-    border: 1px solid yellow;
+    grid-template-columns: repeat(2, 1fr);
+   align-items: center;
+    margin: 8px;
+    padding: 5px;
     
+  }
+  .articleimg{
+    width: 200px;
+  }
+  
+  footer ul{
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+    align-self: center;
+    justify-self: center;
+  }
+    .displaynone{
+      display: none;
+    }
+    .displaybutton{
+      display:inline;
+    align-items: center;
+    width: 140px;
+    padding: 10px;
+    margin: 10px;
+    background-color: red;
+    color: aliceblue;
+ 
+      
+    }
+    .displaybuttonp{
+      text-align: center;
+      
+      display: block;
+    }
+ 
 }
-.banner.img{
-    width: 100%;
-}
+  
